@@ -9,6 +9,8 @@
 - Fixed issue #10365: "true" and "false" are handled incorrectly while parsing
   schemas from XML files.
 - Fixed issue #10398: Oracle tests of DatabaseSchema run into error.
+- Fixed issue #10548: DatabaseSchema uses different sequence names for Oracle
+  and PostgreSQL.
 - Fixed issue #10630: Call-time pass-by-reference warning in Oracle handler.
 - Implemented feature #9584: Switch for overwriting files.
   (PersistentObjectDatabaseSchemaTiein)
